# reflex-django

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  REFLEX_DJANGO_TECHNICAL_AUDIT_ROADMAP.md  RELEASING.md  llm.txt  mkdocs.yml  pyproject.toml  rxconfig.py
.github/workflows/: docs.yml  test.yml
demo/: demo.py
docs/: STYLE.md  api_integration.md  architecture.md  async_streaming_middleware.md  auth_branding.md  authentication.md  best_practices.md  cli.md  configuration.md  cookbook.md  crud_with_mixins_and_states.md  crud_without_mixins.md  database_integration.md  deployment.md  django_context_to_reflex.md  django_middleware_to_reflex.md  django_urls.md  existing_django_project.md  existing_reflex_project.md  faq.md  file_uploads.md  forms_and_validation.md  glossary.md  how_django_works.md  how_reflex_works.md  how_they_fit.md  i18n.md  index.md  installation.md  integration_guides.md  introduction.md  learning_path.md  local_development.md  media_files.md  mental_model.md  migration_django_outer.md  model_state_and_crud_view.md  pages_in_views.md  project_structure.md  public_api.md  (+14 more)
docs/_archive/: crud_with_mixins_and_states.md  crud_without_mixins.md  how_django_works.md  how_reflex_works.md  (+8 more)
python/: reflex_django_reflex_cli.pth
reflex_django_tests/: __init__.py  conftest.py  django_settings.py  test_app_entry_import.py  test_app_factory.py  test_app_state_auth.py  test_appstate_dispatch.py  test_asgi_auto_export.py  test_asgi_build.py  test_asgi_django_led.py  test_asgi_static_mount.py  test_auth_decorators.py  test_auth_login_fields.py  test_auth_login_required.py  test_auth_pages.py  test_auth_password_reset.py  test_auth_registration.py  test_auth_registry.py  test_auth_settings.py  test_auth_shortcuts.py  test_auth_state.py  test_auth_state_flat.py  test_authz.py  test_auto_mount.py  test_auto_mount_admin_order.py  test_auto_mount_admin_order_settings.py  test_auto_mount_admin_order_urls.py  test_auto_mount_prefix_urls.py  test_auto_mount_urls.py  test_builtin_template.py  test_cli.py  test_cli_layout.py  test_compile_prepare.py  test_compile_validate.py  test_conf.py  test_conf_discovery.py  test_context_safe.py  test_core_utilities.py  test_decorated_pages_app_name.py  test_dev_watch.py  (+82 more)
scripts/: check_docs_encoding.py  check_docs_links.py  check_docs_style.py  check_public_docstrings.py  fix_doc_encoding.py  fix_doc_links.py  fix_docs_links.py  rename_rx_settings.py  write_docs_snippets.py
shop/: shop.py
site/: 404.html  index.html
(+403 files in other folders)
