[project]
name = "reflex-django"
version = "0.4.2"
description = "Run a Django backend (Django ORM, Django Admin) alongside a Reflex app."
license = "Apache-2.0"
readme = "README.md"
authors = [{ name = "Mohannad Irshedat" }]
maintainers = [
    { name = "Mohannad Irshedat" },
    { email = "mohannadirshedat77@gmail.com" },
]
requires-python = ">=3.12,<4.0"
keywords = ["reflex", "django", "asgi", "fullstack", "orm", "admin"]
dependencies = [
    "asgiref >=3.8",
    "click >=8.0",
    "dill>=0.4.1",
    "django >=6.0,<7.0",
    "reflex >=0.9.2,<1.0",
    "uvicorn>=0.48.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.scripts]
reflex-django = "reflex_django.cli:main"

[project.urls]
homepage = "https://web7ai.github.io/reflex-django/"
documentation = "https://web7ai.github.io/reflex-django/"
repository = "https://github.com/web7ai/reflex-django"
changelog = "https://github.com/web7ai/reflex-django/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/reflex_django"]

[tool.hatch.build.targets.wheel.force-include]
"python/reflex_django_reflex_cli.pth" = "reflex_django_reflex_cli.pth"

[tool.hatch.build.targets.sdist]
include = [
    "/src/reflex_django",
    "/reflex_django_tests",
    "/python/reflex_django_reflex_cli.pth",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/RELEASING.md",
    "/llm.txt",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["reflex_django_tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:fields may not start with an underscore:RuntimeWarning",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
